--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 .header {
 	width: 100vw;
-    height: 145px;
+    height: 30vh;
     border: 1px solid black;
     background: rgb(255, 72, 79);
 }
@@ -36,18 +36,20 @@
 
 .game-info {
     height: 80vh;
-    width: 15%;
+    width: 15vw;
     background: rgb(255, 72, 79);
     border: 1px solid black;
     margin-top: 2%;
     margin-left: 2%;
     padding-left: 2%;
+    padding-right: 3%;
     display: inline-block;
     float: left;
+    font-size: 2vw;
 }
 
 .game-area {
-    width: 60vw;
+    width: 58vw;
     height: 85vh;
     display: inline-block;
     float: left;
