--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 
 .header {
-	width: 100vw;
-    height: 30vh;
-    border: 1px solid black;
-    background: rgb(255, 72, 79);
+	width: 100%;
+    height: 120px;
+    border: 4px solid black;
+    color: white;
+    background: rgb(255, 0, 11);
 }
 
 .game-logo {
     display: inline-block;
-    width: 17%;
+    width: 20%;
     height: 73%;
     margin-left: 3%;
-    margin-top: 2%;
+    margin-top: 1%;
     border: 1px solid black;
 }
 
@@ -22,40 +23,64 @@
     display: inline-block;
     position: relative;
     top: 45%;
-    left: 3%;
+    left: 26%;
 }
 
 .header h1 {
     display: inline-block;
     position: absolute;
-    padding-left: 10%;
+    padding-left: 9%;
     padding-top: 3%;
     margin: 0px;
-    font-size: 52px;
+    font-size: 2em;
 }
 
 .game-info {
     height: 80vh;
-    width: 15vw;
-    background: rgb(255, 72, 79);
-    border: 1px solid black;
+    width: 12vw;
+    background: rgb(255, 0, 11);
+    color: white;
+    border: 4px solid black;
     margin-top: 2%;
     margin-left: 2%;
     padding-left: 2%;
     padding-right: 3%;
     display: inline-block;
     float: left;
-    font-size: 2vw;
+    font-size: 1em;
 }
 
 .game-area {
-    width: 58vw;
-    height: 85vh;
+    width: 63vw;
+    height: 100vh;
     display: inline-block;
     float: left;
-    background: rgb(255, 72, 79);
-    border: 1px solid black;
+    background: rgb(255, 0, 11);
+    color: white;
+    border: 4px solid black;
     margin-top: 5%;
     margin-right: 4%;
     margin-left: 8%;
+    padding-bottom: 2%;
+}
+.card_container {
+    position: relative;
+    display: inline-block;
+    background-color: red;
+    height: 150px;
+    width: 110px;
+    margin-left: 2%;
+    margin-top: 4%;
+}
+.card{
+    height: 150px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+.card-front {
+    width: 109px;
+}
+.card-hidden{
+    display: none;
 }
