--- a/style.css
+++ b/style.css
@@ -54,13 +54,12 @@
     width: 63vw;
     height: 100vh;
     display: inline-block;
-    float: left;
     background: rgb(255, 0, 11);
     color: white;
     border: 4px solid black;
     margin-top: 5%;
     margin-right: 4%;
-    margin-left: 8%;
+    margin-left: 3%;
     padding-bottom: 2%;
 }
 .card_container {
@@ -82,5 +81,8 @@
     width: 109px;
 }
 .card-hidden{
+    display: none;
+}
+.card-match{
     display: none;
 }
