--- a/style.css
+++ b/style.css
@@ -51,34 +51,32 @@
 }
 
 .game-area {
-    width: 63vw;
+    width: 72vw;
     height: 100vh;
+    max-width:1200px;
     display: inline-block;
-    background: rgb(255, 0, 11);
     color: white;
-    border: 4px solid black;
     margin-top: 5%;
-    margin-right: 4%;
     margin-left: 3%;
     padding-bottom: 2%;
 }
 .card_container {
     position: relative;
     display: inline-block;
-    background-color: red;
     height: 150px;
     width: 110px;
-    margin-left: 2%;
+    margin-left: 3%;
     margin-top: 4%;
 }
 .card{
-    height: 150px;
+    height: 170px;
     position: absolute;
     left: 0px;
     top: 0px;
 }
 .card-front {
     width: 109px;
+
 }
 .card-hidden{
     display: none;
