--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     height: 120px;
     border: 4px solid black;
     color: white;
-    background: rgb(255, 0, 11);
+    background: black;
 }
 
 .game-logo {
@@ -14,6 +14,9 @@
     margin-left: 3%;
     margin-top: 1%;
     border: 1px solid black;
+}
+.pikachu-logo {
+    width: 80px;
 }
 
 .reset-button {
@@ -49,11 +52,15 @@
     float: left;
     font-size: 1em;
 }
+.game-info p {
+    line-height: 500%;
+    font-size: 17px;
+}
 
 .game-area {
     width: 72vw;
     height: 100vh;
-    max-width:1200px;
+    max-width:1000px;
     display: inline-block;
     color: white;
     margin-top: 5%;
