--- a/style.css
+++ b/style.css
@@ -1,32 +1,50 @@
 
+.background_image {
+position:absolute;
+width: 1263px;
+height:850px;
+}
+.start_game {
+    position:absolute;
+    width: 320px;
+  left: 47%;
+  top: 45%;
+}
+.pokeball {
+    width: 85%;
+}
+.start_game > p{
+    font-size: 25px;
+}
 .header {
-	width: 100%;
-    height: 148px;
-    border: 4px solid black;
-    color: white;
-    background: black;
-    position: relative;
+	width: 1000px;
+  margin: 0 auto;
+  height: 148px;
+  border: 4px solid black;
+  color: white;
+  position: relative;
+  border-radius: 10px;
+  background-image: url(images/header-background.gif);
 }
 
 .game-logo {
     display: inline-block;
-    width: 20%;
+    width: 24%;
     height: 73%;
-    margin-left: 3%;
-    margin-top: 1%;
+    margin-left: 5%;
+    margin-top: 2%;
     position:relative;
-    border: 1px solid black;
 }
 .pikachu-logo {
-    width: 30%;
+    width: 29%;
 }
 .charmander-logo {
-    width: 26%;
+    width: 25%;
 }
 .squirtle-logo {
-    width:37%;
+    width:34%;
     position:relative;
-    top: 12%;
+    top: 8%;
 }
 .pokemon-logo {
     width: 80%;
@@ -38,7 +56,7 @@
 }
 .header button {
     position: relative;
-    left: 36%;
+    left: 23%;
     top: 17%;
       background: rgb(55, 87, 155);
   color: rgb(255, 201, 69);
@@ -48,29 +66,31 @@
 .header h1 {
     display: inline-block;
     position: absolute;
-    padding-left: 9%;
+    padding-left: 2%;
     padding-top: 4%;
     margin: 0px;
-    font-size: 3em;
+    font-size: 42px;
     color: rgb(255, 201, 69);
+    text-shadow: 3px 3px 2px blue;
 }
 
 .game-info {
-    height: 80vh;
-    width: 12vw;
-    background: black;
-    color: white;
-    border: 4px solid black;
-    margin-top: 2%;
-    margin-left: 2%;
-    padding-left: 2%;
-    padding-right: 3%;
-    display: inline-block;
-    float: left;
-    font-size: 1em;
+    position:relative;
+      height: 500px;
+  width: 114px;
+  border: 4px solid black;
+  margin-top: 2%;
+  margin-left: 10%;
+  padding-left: 2%;
+  padding-right: 3%;
+  display: inline-block;
+  float: left;
+  font-size: 17px;
+  border-radius: 10px;
+  background-image: url(images/header-background.gif);
 }
 .game-info p {
-    line-height: 500%;
+    line-height: 350%;
     font-size: 17px;
 }
 .game-info > .attempts {
@@ -93,15 +113,15 @@
     max-width:1000px;
     display: inline-block;
     color: white;
-    margin-top: 5%;
-    margin-left: 7%;
+    margin-top: 3%;
+    margin-left: 3%;
     padding-bottom: 2%;
 }
 .card_container {
     position: relative;
     display: inline-block;
-    height: 125px;
-    width: 95px;
+    height: 110px;
+    width: 86px;
     margin-left: 4%;
     margin-top: 4%;
 }
@@ -110,6 +130,7 @@
     position: absolute;
     left: 0px;
     top: 0px;
+    display:none;
 }
 .card_back_selected{
     -webkit-transform: rotate3d(1,1,0,180deg);
@@ -132,15 +153,6 @@
 .card-front{
     -webkit-transform: rotate3d(1,1,0,180deg);
 }
-
-
-#.card-front {
-    width: 124px;
-}
-    
-#.card-hidden{
-    display: none;
-}
 .card-match-front{
     opacity: 0;
     -webkit-transform: rotate3d(1,1,0,0deg)!important;
@@ -151,4 +163,8 @@
     -webkit-transform: rotate3d(1,1,0,180deg);
     -webkit-transition: .6s;
 
+}
+.time {
+  margin-left: 28%;
+  font-size: 24px;
 }
